--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "grillrentbff",
   "version": "1.0.0",
+  "engines": {
+    "node": "22.12.0"
+  },
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "start:staging": "NODE_ENV=staging node dist/server.js",
+    "start:production": "NODE_ENV=production node dist/server.js",
+    "build": "tsc",
+    "prestart": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -17,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "joi": "^17.13.3",
@@ -27,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
